Remove redundant support for daemon on JDK < 8