@@ -18,6 +18,7 @@ package org.gradle.launcher.daemon.configuration
 import org.gradle.api.JavaVersion
 import org.gradle.api.internal.file.TestFiles
 import org.gradle.internal.jvm.JavaInfo
+import org.gradle.internal.jvm.JpmsConfiguration
 import org.gradle.internal.jvm.Jvm
 import org.gradle.launcher.configuration.BuildLayoutResult
 import spock.lang.Issue
@@ -58,30 +59,37 @@ class DaemonParametersTest extends Specification {
         parameters.effectiveJvm == Jvm.current()
     }
 
-    def "can apply defaults for Java 7 and earlier"() {
+    def "can apply defaults for Java 8"() {
         when:
-        parameters.applyDefaultsFor(JavaVersion.VERSION_1_7)
+        parameters.applyDefaultsFor(JavaVersion.VERSION_1_8)
 
         then:
-        parameters.effectiveJvmArgs.containsAll("-Xmx512m", "-Xms256m", "-XX:MaxPermSize=256m", "-XX:+HeapDumpOnOutOfMemoryError")
+        parameters.effectiveJvmArgs.containsAll("-Xmx512m", "-Xms256m", "-XX:MaxMetaspaceSize=256m", "-XX:+HeapDumpOnOutOfMemoryError")
+        !parameters.effectiveJvmArgs.contains("--add-opens")
     }
 
-    def "can apply defaults for Java 8 and later"() {
+    def "can apply defaults for Java 9 and later"() {
         when:
         parameters.applyDefaultsFor(JavaVersion.VERSION_1_9)
 
         then:
         parameters.effectiveJvmArgs.containsAll("-Xmx512m", "-Xms256m", "-XX:MaxMetaspaceSize=256m", "-XX:+HeapDumpOnOutOfMemoryError")
-        !parameters.effectiveJvmArgs.contains("-XX:MaxPermSize=256m")
+        assertContainsJPMSDefaults(parameters.effectiveJvmArgs)
     }
 
     def "can provide jvmargs which are added to defaults"() {
         when:
         parameters.setJvmArgs(["-XX:+UseG1GC"])
-        parameters.applyDefaultsFor(JavaVersion.VERSION_1_8)
+        parameters.applyDefaultsFor(JavaVersion.VERSION_1_9)
 
         then:
         parameters.effectiveJvmArgs.containsAll(["-XX:+UseG1GC", "-Xmx512m", "-Xms256m", "-XX:MaxMetaspaceSize=256m", "-XX:+HeapDumpOnOutOfMemoryError"])
+        assertContainsJPMSDefaults(parameters.effectiveJvmArgs)
+    }
+
+    private void assertContainsJPMSDefaults(def jvmArgs) {
+        assert Collections.indexOfSubList(jvmArgs, ["--add-opens", "java.base/java.util=ALL-UNNAMED"]) >= 0
+        assert Collections.indexOfSubList(jvmArgs, JpmsConfiguration.GRADLE_DAEMON_JPMS_ARGS) >= 0
     }
 
     def "can provide jvmargs to override defaults"() {
@@ -91,15 +99,6 @@ class DaemonParametersTest extends Specification {
 
         then:
         parameters.effectiveJvmArgs.containsAll(["-Xmx1111m", "-Xms555m", "-XX:MaxMetaspaceSize=222m", "-XX:+HeapDumpOnOutOfMemoryError"])
-    }
-
-    def "can provide jvmargs to override defaults for JDK < 8"() {
-        when:
-        parameters.setJvmArgs(["-Xmx1111m", "-Xms555m", "-XX:MaxPermSize=222m"])
-        parameters.applyDefaultsFor(JavaVersion.VERSION_1_7)
-
-        then:
-        parameters.effectiveJvmArgs.containsAll(["-Xmx1111m", "-Xms555m", "-XX:MaxPermSize=222m", "-XX:+HeapDumpOnOutOfMemoryError"])
     }
 
     def "jvmargs that duplicate defaults are ignored"() {
